--- a/index.html
+++ b/index.html
@@ -3,60 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avalanche Risk Map - South Tyrol</title>
+    <title>RiskySlopes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="loading">
-    <div id="spinner"></div>
-</div>
-
 <header>
-    <table>
-        <tr>
-            <td id="logo">RiskySlopes</td>
-            <td id="navigation">
-                <a href="#work">Map</a>
-                <a href="#bio">About</a>
-                <a href="#contact">Contact</a>
-            </td>
-        </tr>
-    </table>
+    <div class="logo">RiskySlopes</div>
+    <nav class="nav-links">
+        <a href="#map">Map</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
-<div id="controls">
-    <label for="avalanche-level">Lawinenstufe:</label>
-    <select id="avalanche-level">
-        <option value="1">1 - Gering</option>
-        <option value="2">2 - Mäßig</option>
-        <option value="3">3 - Erheblich</option>
-        <option value="4">4 - Groß</option>
-        <option value="5">5 - Sehr Groß</option>
-    </select>
-
-    <label for="wind-direction">Windrichtung:</label>
-    <select id="wind-direction">
-        <option value="N">N</option>
-        <option value="NE">NE</option>
-        <option value="E">E</option>
-        <option value="SE">SE</option>
-        <option value="S">S</option>
-        <option value="SW">SW</option>
-        <option value="W">W</option>
-        <option value="NW">NW</option>
-    </select>
-
-    <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
-</div>
-
-<div id="map"></div>
-
-<input type="file" id="file-input" accept=".gpx, .geojson">
-<button onclick="toggleDrawMode()">Route einzeichnen</button>
+<main>
+    <div id="map"></div>
+    <div id="controls">
+        <select id="avalanche-level">
+            <option value="1">Lawinenstufe 1 - Gering</option>
+            <option value="2">Lawinenstufe 2 - Mäßig</option>
+            <option value="3">Lawinenstufe 3 - Erheblich</option>
+        </select>
+        <select id="wind-direction">
+            <option value="N">Windrichtung N</option>
+            <option value="E">Windrichtung E</option>
+            <option value="S">Windrichtung S</option>
+        </select>
+        <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
+        <input type="file" id="file-input" accept=".gpx, .geojson">
+        <button onclick="toggleDrawMode()">Route einzeichnen</button>
+    </div>
+</main>
 
 <footer>
-    Made on earth by a human | <a href="https://yourgithub.io">RiskySlopes</a>
+    Made with ❤️ by RiskySlopes
 </footer>
 
 <script src="script.js"></script>
