--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
 
+<header>
+    <div class="logo">
+        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
+        <span>RiskySlopes</span>
+    </div>
+    <nav class="nav-links">
+        <a href="#map">Map</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
 <div id="sidebar">
     <h2>Touren Info</h2>
     <div class="info-section">
@@ -36,15 +48,6 @@
         <p>Ski</p>
     </div>
 </div>
-
-<header>
-    <div class="logo">RiskySlopes</div>
-    <nav class="nav-links">
-        <a href="#map">Map</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
 
 <main>
     <div id="controls">
