--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="controls">
             <label for="avalanche-level">Lawinenstufe:</label>
             <select id="avalanche-level">
-                <option value="1">1 - Ggg</option>
+                <option value="1">1 - G</option>
                 <option value="2">2 - Mäßig</option>
                 <option value="3">3 - Erheblich</option>
                 <option value="4">4 - Groß</option>
