--- a/index.html
+++ b/index.html
@@ -1,91 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes Map</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cesium South Tyrol Viewer</title>
+  <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <style>
+    #cesiumContainer {
+      width: 100%;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
-
-<header>
-    <div class="logo">
-        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
-        <span>RiskySlopes</span>
-    </div>
-    <nav class="nav-links">
-        <a href="#map">Map</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
-
-<div id="content">
-    <div id="sidebar">
-        <h2>Touren Info</h2>
-        <div class="info-section">
-            <label>Datum:</label>
-            <input type="date" id="tour-date">
-        </div>
-        <div class="info-section">
-            <label>Startzeit:</label>
-            <input type="time" id="tour-start-time">
-        </div>
-        <div class="info-section">
-            <label>Dauer:</label>
-            <p>02:34 h</p>
-        </div>
-        <div class="info-section">
-            <label>Distanz:</label>
-            <p>3.30 km</p>
-        </div>
-        <div class="info-section">
-            <label>Höhenmeter:</label>
-            <p>776 m</p>
-        </div>
-        <div class="info-section">
-            <label>Art:</label>
-            <p>Ski</p>
-        </div>
-    </div>
-
-    <main>
-        <div id="controls">
-            <label for="avalanche-level">Lawinenstufe:</label>
-            <select id="avalanche-level">
-                <option value="1">1 - Gering</option>
-                <option value="2">2 - Mäßig</option>
-                <option value="3">3 - Erheblich</option>
-                <option value="4">4 - Groß</option>
-                <option value="5">5 - Sehr Groß</option>
-            </select>
-            <label for="wind-direction">Windrichtung:</label>
-            <select id="wind-direction">
-                <option value="N">N</option>
-                <option value="NE">NE</option>
-                <option value="E">E</option>
-                <option value="SE">SE</option>
-                <option value="S">S</option>
-                <option value="SW">SW</option>
-                <option value="W">W</option>
-                <option value="NW">NW</option>
-            </select>
-            <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
-        </div>
-        
-        <div id="map"></div>
-
-        <input type="file" id="file-input" accept=".gpx, .geojson">
-        <button onclick="toggleDrawMode()">Route einzeichnen</button>
-    </main>
-</div>
-
-<footer>
-    Made with ❤️ by RiskySlopes
-</footer>
-
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script src="script.js"></script>
+  <div id="cesiumContainer"></div>
+  <!-- Link to the external script file -->
+  <script src="script.js"></script>
 </body>
 </html>
