--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>RiskySlopes Map</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" />
+    <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
 </head>
 <body>
 
@@ -74,7 +76,11 @@
             <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
         </div>
         
-        <div id="map"></div>
+        <!-- Leaflet Map Container -->
+        <div id="map" style="width: 100%; height: 50vh;"></div>
+
+        <!-- Cesium Map Container -->
+        <div id="cesiumContainer" style="width: 100%; height: 50vh;"></div>
 
         <input type="file" id="file-input" accept=".gpx, .geojson">
         <button onclick="toggleDrawMode()">Route einzeichnen</button>
