--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
 <body>
 
 <header>
-    <div class="logo">
-        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
-        <span>RiskySlopes</span>
     </div>
     <nav class="nav-links">
         <a href="#map">Map</a>
@@ -92,7 +89,7 @@
         <div id="toolbar">
             <label for="avalanche-level">Lawinenstufe:</label>
             <select id="avalanche-level">
-                <option value="1">1 - Gering</option>
+                <option value="1">1 - Ger</option>
                 <option value="2">2 - Mäßig</option>
                 <option value="3">3 - Erheblich</option>
                 <option value="4">4 - Groß</option>
