--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes 3D Map</title>
+    <title>RiskySlopes 2D Map</title>
     
     <!-- Cesium CSS for widgets -->
     <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
     <style>
-        /* Basic styles for layout and loading overlay */
         #cesiumContainer {
             width: 100%;
             height: 100vh;
@@ -48,6 +47,9 @@
 <body>
 
 <header>
+    <div class="logo">
+        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
+        <span>RiskySlopes</span>
     </div>
     <nav class="nav-links">
         <a href="#map">Map</a>
@@ -89,7 +91,7 @@
         <div id="toolbar">
             <label for="avalanche-level">Lawinenstufe:</label>
             <select id="avalanche-level">
-                <option value="1">1 - Ger</option>
+                <option value="1">1 - Gering</option>
                 <option value="2">2 - Mäßig</option>
                 <option value="3">3 - Erheblich</option>
                 <option value="4">4 - Groß</option>
