--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RiskySlopes Map</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <!-- Link to Cesium CSS for widgets -->
     <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
@@ -26,19 +25,60 @@
 <div id="content">
     <div id="sidebar">
         <h2>Touren Info</h2>
-        <!-- Sidebar content -->
+        <!-- Sidebar content with tour information -->
+        <div class="info-section">
+            <label>Datum:</label>
+            <input type="date" id="tour-date">
+        </div>
+        <div class="info-section">
+            <label>Startzeit:</label>
+            <input type="time" id="tour-start-time">
+        </div>
+        <div class="info-section">
+            <label>Dauer:</label>
+            <p>02:34 h</p>
+        </div>
+        <div class="info-section">
+            <label>Distanz:</label>
+            <p>3.30 km</p>
+        </div>
+        <div class="info-section">
+            <label>Höhenmeter:</label>
+            <p>776 m</p>
+        </div>
+        <div class="info-section">
+            <label>Art:</label>
+            <p>Ski</p>
+        </div>
     </div>
 
     <main>
         <div id="controls">
             <!-- Control elements for avalanche levels and wind direction -->
+            <label for="avalanche-level">Lawinenstufe:</label>
+            <select id="avalanche-level">
+                <option value="1">1 - Gering</option>
+                <option value="2">2 - Mäßig</option>
+                <option value="3">3 - Erheblich</option>
+                <option value="4">4 - Groß</option>
+                <option value="5">5 - Sehr Groß</option>
+            </select>
+            <label for="wind-direction">Windrichtung:</label>
+            <select id="wind-direction">
+                <option value="N">N</option>
+                <option value="NE">NE</option>
+                <option value="E">E</option>
+                <option value="SE">SE</option>
+                <option value="S">S</option>
+                <option value="SW">SW</option>
+                <option value="W">W</option>
+                <option value="NW">NW</option>
+            </select>
+            <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
         </div>
         
         <!-- Cesium map container -->
         <div id="cesiumContainer"></div>
-
-        <input type="file" id="file-input" accept=".gpx, .geojson">
-        <button onclick="toggleDrawMode()">Route einzeichnen</button>
     </main>
 </div>
 
