--- a/index.html
+++ b/index.html
@@ -3,92 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes Map</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Link to Cesium CSS for widgets -->
+    <title>RiskySlopes 2D Map</title>
+    
+    <!-- Cesium CSS for widgets -->
     <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <div class="logo">
-        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
-        <span>RiskySlopes</span>
-    </div>
-    <nav class="nav-links">
-        <a href="#map">Map</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
-
-<div id="content">
-    <div id="sidebar">
-        <h2>Touren Info</h2>
-        <!-- Sidebar content with tour information -->
-        <div class="info-section">
-            <label>Datum:</label>
-            <input type="date" id="tour-date">
-        </div>
-        <div class="info-section">
-            <label>Startzeit:</label>
-            <input type="time" id="tour-start-time">
-        </div>
-        <div class="info-section">
-            <label>Dauer:</label>
-            <p>02:34 h</p>
-        </div>
-        <div class="info-section">
-            <label>Distanz:</label>
-            <p>3.30 km</p>
-        </div>
-        <div class="info-section">
-            <label>Höhenmeter:</label>
-            <p>776 m</p>
-        </div>
-        <div class="info-section">
-            <label>Art:</label>
-            <p>Ski</p>
-        </div>
+    <div id="cesiumContainer" style="width: 100%; height: 100vh;"></div>
+    <div id="loadingOverlay">
+        <h1>Loading...</h1>
     </div>
 
-    <main>
-        <div id="controls">
-            <!-- Control elements for avalanche levels and wind direction -->
-            <label for="avalanche-level">Lawinenstufe:</label>
-            <select id="avalanche-level">
-                <option value="1">1 - Gering</option>
-                <option value="2">2 - Mäßig</option>
-                <option value="3">3 - Erheblich</option>
-                <option value="4">4 - Groß</option>
-                <option value="5">5 - Sehr Groß</option>
-            </select>
-            <label for="wind-direction">Windrichtung:</label>
-            <select id="wind-direction">
-                <option value="N">N</option>
-                <option value="NE">NE</option>
-                <option value="E">E</option>
-                <option value="SE">SE</option>
-                <option value="S">S</option>
-                <option value="SW">SW</option>
-                <option value="W">W</option>
-                <option value="NW">NW</option>
-            </select>
-            <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
-        </div>
-        
-        <!-- Cesium map container -->
-        <div id="cesiumContainer"></div>
-    </main>
-</div>
-
-<footer>
-    Made with ❤️ by RiskySlopes
-</footer>
-
-<!-- Cesium library -->
-<script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
-<!-- Custom script -->
-<script src="script.js"></script>
+    <!-- CesiumJS library -->
+    <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
+    <!-- Custom JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
