--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes Map</title>
+    <title>RiskySlopes 2D Map</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Link to Cesium CSS for widgets -->
     <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
@@ -25,7 +24,6 @@
 <div id="content">
     <div id="sidebar">
         <h2>Touren Info</h2>
-        <!-- Sidebar content with tour information -->
         <div class="info-section">
             <label>Datum:</label>
             <input type="date" id="tour-date">
@@ -54,7 +52,6 @@
 
     <main>
         <div id="controls">
-            <!-- Control elements for avalanche levels and wind direction -->
             <label for="avalanche-level">Lawinenstufe:</label>
             <select id="avalanche-level">
                 <option value="1">1 - Gering</option>
@@ -77,8 +74,8 @@
             <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
         </div>
         
-        <!-- Cesium map container -->
-        <div id="cesiumContainer"></div>
+        <!-- Single Cesium map container -->
+        <div id="cesiumContainer" style="width: 100%; height: 80vh;"></div>
     </main>
 </div>
 
@@ -86,9 +83,8 @@
     Made with ❤️ by RiskySlopes
 </footer>
 
-<!-- Cesium library -->
 <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
-<!-- Custom script -->
 <script src="script.js"></script>
+
 </body>
 </html>
