--- a/index.html
+++ b/index.html
@@ -3,88 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes 2D Map</title>
-    <link rel="stylesheet" href="style.css">
+    <title>RiskySlopes 3D Map</title>
+
+    <!-- Cesium CSS for widgets -->
     <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Basic styles for layout */
+        #cesiumContainer {
+            width: 100%;
+            height: 100vh;
+        }
+
+        #sidebar {
+            width: 250px;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: #ffffff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+            z-index: 10;
+        }
+
+        /* Full-width map with reduced sidebar */
+        main {
+            margin-left: 260px;
+        }
+    </style>
 </head>
 <body>
-
 <header>
     <div class="logo">
         <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
         <span>RiskySlopes</span>
     </div>
-    <nav class="nav-links">
-        <a href="#map">Map</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </nav>
 </header>
 
-<div id="content">
-    <div id="sidebar">
-        <h2>Touren Info</h2>
-        <div class="info-section">
-            <label>Datum:</label>
-            <input type="date" id="tour-date">
-        </div>
-        <div class="info-section">
-            <label>Startzeit:</label>
-            <input type="time" id="tour-start-time">
-        </div>
-        <div class="info-section">
-            <label>Dauer:</label>
-            <p>02:34 h</p>
-        </div>
-        <div class="info-section">
-            <label>Distanz:</label>
-            <p>3.30 km</p>
-        </div>
-        <div class="info-section">
-            <label>Höhenmeter:</label>
-            <p>776 m</p>
-        </div>
-        <div class="info-section">
-            <label>Art:</label>
-            <p>Ski</p>
-        </div>
-    </div>
+<div id="sidebar">
+    <h2>Gefahr und Route</h2>
 
-    <main>
-        <div id="controls">
-            <label for="avalanche-level">Lawinenstufe:</label>
-            <select id="avalanche-level">
-                <option value="1">1 - Gering</option>
-                <option value="2">2 - Mäßig</option>
-                <option value="3">3 - Erheblich</option>
-                <option value="4">4 - Groß</option>
-                <option value="5">5 - Sehr Groß</option>
-            </select>
-            <label for="wind-direction">Windrichtung:</label>
-            <select id="wind-direction">
-                <option value="N">N</option>
-                <option value="NE">NE</option>
-                <option value="E">E</option>
-                <option value="SE">SE</option>
-                <option value="S">S</option>
-                <option value="SW">SW</option>
-                <option value="W">W</option>
-                <option value="NW">NW</option>
-            </select>
-            <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
-        </div>
-        
-        <!-- Single Cesium map container -->
-        <div id="cesiumContainer" style="width: 100%; height: 80vh;"></div>
-    </main>
+    <div class="info-section">
+        <label for="tour-date">Datum:</label>
+        <input type="date" id="tour-date">
+    </div>
+    <div class="info-section">
+        <label for="tour-start-time">Startzeit:</label>
+        <input type="time" id="tour-start-time">
+    </div>
+    <div class="info-section">
+        <label for="avalanche-level">Gefahrenstufe:</label>
+        <select id="avalanche-level">
+            <option value="1">1 - Gering</option>
+            <option value="2">2 - Mäßig</option>
+            <option value="3">3 - Erheblich</option>
+            <option value="4">4 - Groß</option>
+            <option value="5">5 - Sehr Groß</option>
+        </select>
+    </div>
+    <div class="info-section">
+        <label for="wind-direction">Windrichtung:</label>
+        <select id="wind-direction">
+            <option value="N">N</option>
+            <option value="NE">NE</option>
+            <option value="E">E</option>
+            <option value="SE">SE</option>
+            <option value="S">S</option>
+            <option value="SW">SW</option>
+            <option value="W">W</option>
+            <option value="NW">NW</option>
+        </select>
+    </div>
+    <div class="info-section">
+        <input type="file" id="file-input" accept=".gpx, .geojson">
+        <button onclick="uploadRoute()">Route hochladen</button>
+    </div>
+    <div class="info-section">
+        <button onclick="toggleDrawMode()">Route einzeichnen</button>
+    </div>
 </div>
 
-<footer>
-    Made with ❤️ by RiskySlopes
-</footer>
+<main>
+    <div id="cesiumContainer"></div>
+</main>
 
+<!-- CesiumJS library -->
 <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
 <script src="script.js"></script>
-
 </body>
 </html>
